Fixed some spacing issues, added footer to all pages

--- a/css/index.css
+++ b/css/index.css
@@ -16,14 +16,15 @@ body {
   color: #b3b3b3;
 }
 
-/* main {
-  padding: 1rem 1rem;
-} */
+main {
+  padding: 0 2rem;
+}
 
 h1 {
   color: #8ad1fd;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 
 #intro {
