--- a/css/individual.css
+++ b/css/individual.css
@@ -4,6 +4,7 @@ body {
   background-color: #1f2933;
   color: #f5f7fa;
   font-family: "Quicksand", sans-serif;
+  margin: 0;
 }
 
 footer > p {
