--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,13 @@ h2 {
   color: #8ad1fd;
 }
 
+.footerclass {
+  font-size: 0.8rem;
+  text-align: center;
+  padding-top: 5vw;
+  color: #f5f7fa;
+}
+
 @media only screen and (max-width: 850px) {
   .hamburger {
     display: block;
