--- a/css/movies.css
+++ b/css/movies.css
@@ -21,6 +21,7 @@ h1 {
 h2 {
   color: #8ad1fd;
   font-size: 2rem;
+  margin-left: 2rem;
 }
 
 .movie-list {
@@ -110,6 +111,10 @@ h4 {
   img {
     max-height: 55%;
   }
+}
+
+article {
+  margin: 0 auto;
 }
 
 /* added 22.02.2021 17:13 */
